# matrix-mult

./: CMakeLists.txt  Makefile
incl/: draw.h  fdf.h  hmap.h  keydef.h  matrix.h  project.h  vector.h
libft/: Makefile
libft/incl/: get_next_line.h  libft.h
libft/src/get_next_line/: get_next_line.c  get_next_line_utils.c
libft/src/libft/: ft_isdigit.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c
maps/: 4.fdf
src/: draw_1.c  draw_2.c  draw_3.c  draw_4.c  hmap.c  hmap_to_matrix.c  hooks.c  hooks_2.c  init.c  main.c  matrix_1.c  matrix_2.c  matrix_3.c  project_1.c  project_2.c  read_file_1.c  read_file_2.c  vector_1.c  vector_2.c
